# OpenStage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/asset_builder/: Cargo.toml
apps/asset_builder/src/: glb_writer.rs  icon_gen.rs  import.rs  list.rs  main.rs  paths.rs  thumbnail.rs  validate.rs
apps/asset_builder/src/fixtures/: mod.rs  pack.rs  top.rs
apps/avatar_desktop/: Cargo.toml  build.rs
apps/avatar_desktop/src/: app.rs  face_textures.rs  main.rs
assets/processed/avatars/bodies/: phase4_rig.glb
assets/processed/avatars/hairs/: hair_phase17_basic_001.glb
assets/processed/metadata/: accessory_phase17_basic_001.json  bottom_phase17_basic_001.json  duck.json  duck_copy_001.json  glasses_phase17_basic_001.json  hair_phase17_basic_001.json  hat_phase17_basic_001.json  phase4_rig.json  phase7_top.json  shoes_phase17_basic_001.json
crates/animation/: Cargo.toml
crates/animation/src/: clip.rs  debug.rs  lib.rs  player.rs  skeleton.rs  skinning.rs
crates/assets/: Cargo.toml
crates/assets/src/: cache.rs  database.rs  lib.rs  metadata.rs  scanner.rs  validation.rs
crates/avatar/: Cargo.toml
crates/avatar/src/: avatar.rs  colors.rs  customization.rs  expressions.rs  lib.rs  save.rs  slots.rs
crates/commands/: Cargo.toml
crates/commands/src/: command.rs  context.rs  error.rs  history.rs  lib.rs  router.rs  validation.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: config.rs  error.rs  input.rs  lib.rs  paths.rs  perf.rs  time.rs
crates/export/: Cargo.toml
crates/export/src/: gltf.rs  lib.rs  png.rs  video.rs
crates/qa/: Cargo.toml
crates/qa/src/: lib.rs
crates/qa/tests/: asset_builder_pipeline.rs  editor_modes.rs  golden_capture.rs  perf_baseline.rs  save_load_round_trip.rs  selection_inspector.rs  soak.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: camera.rs  color.rs  debug_lines.rs  diff.rs  gltf_loader.rs  lib.rs  light.rs  material.rs  mesh.rs  renderer.rs  scene.rs  screenshot.rs  shader.rs  texture.rs  timer.rs
crates/renderer/src/shaders/: debug_lines.wgsl  mesh.wgsl
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  editor.rs  export.rs  fonts.rs  gallery.rs  icons.rs  inspector.rs  layout.rs  lib.rs  modes.rs  theme.rs  tools.rs  widgets.rs
docs/: architecture.md  asset_pipeline.md  handover_progress.md  packaging.md  roadmap.md  save_format.md  skeleton_standard.md  testing.md
tests/baselines/: perf_baseline.json
tools/: build_installer.ps1  dev_codesign.ps1
wix/: LICENSE.rtf  assets.wxs  main.wxs
