[package]
name = "asset_builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "asset_builder"
path = "src/main.rs"

[dependencies]
animation = { workspace = true }
assets    = { workspace = true }
renderer  = { workspace = true }
export    = { workspace = true }
clap      = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow    = { workspace = true }
glam      = { workspace = true }
gltf      = { workspace = true }
image     = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
wgpu      = { workspace = true }
bytemuck  = { workspace = true }
