[package]
name = "animation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
glam      = { workspace = true }
gltf      = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
