[package]
name = "avatar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
assets     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
glam       = { workspace = true }
thiserror  = { workspace = true }
