[package]
name = "engine_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
glam        = { workspace = true }
dirs        = { workspace = true }
ui          = { workspace = true }
